# basango-ai

./: .gitignore  README.md  pyproject.toml
src/basango_ai/: __init__.py
src/basango_ai/core/: constants.py  types.py  utils.py
src/basango_ai/models/ner/: spacy.py
src/basango_ai/models/sentiment/: tabularisai.py
src/basango_ai/models/tokenizer/: tiktoken.py
src/basango_ai/workflow/: dataset.py  ner.py  sentiment.py  tokenizer.py
